# videoplayer

./: .gitignore  build.gradle  local.properties  settings.gradle
app/: .gitignore  (+1 more)
ffmepglibrary/: CMakeLists.txt  build.gradle
ffmepglibrary/src/androidTest/java/com/example/ffmepglibrary/: ExampleInstrumentedTest.java
ffmepglibrary/src/main/: AndroidManifest.xml
ffmepglibrary/src/main/cpp/: AVPacketQueue.cpp  AVPacketQueue.h  AudioFrame.h  AudioPlayer.cpp  AudioPlayer.h  DeMuxer.cpp  DeMuxer.h  MediaPlayer.cpp  MediaPlayer.h  MessageCallback.h  OpenSLRender.cpp  OpenSLRender.h  VideoPlayer.cpp  VideoPlayer.h  native-lib.cpp
ffmepglibrary/src/main/cpp/include/: x264_config.h
ffmepglibrary/src/main/cpp/include/libavutil/: ffversion.h
ffmepglibrary/src/main/cpp/media/: const.h  one_frame.h
ffmepglibrary/src/main/cpp/media/decoder/: a_decoder.cpp  a_decoder.h  base_decoder.cpp  base_decoder.h  decode_state.h  i_decode_state_cb.cpp  i_decode_state_cb.h  i_decoder.h  v_decoder.cpp  v_decoder.h
ffmepglibrary/src/main/cpp/media/encoder/: a_encoder.cpp  a_encoder.h  base_encoder.cpp  base_encoder.h  i_encode_state_cb.h  i_encoder.h  v_encoder.cpp  v_encoder.h
ffmepglibrary/src/main/cpp/media/muxer/: ff_repack.cpp  ff_repack.h  i_muxer_cb.h  mp4_muxer.cpp  mp4_muxer.h
ffmepglibrary/src/main/cpp/media/player/: gl_player.cpp  gl_player.h  player.cpp  player.h
ffmepglibrary/src/main/cpp/media/render/audio/: audio_render.h  opensl_render.cpp  opensl_render.h
ffmepglibrary/src/main/cpp/media/render/video/: native_render.cpp  native_render.h  opengl_pixel_receiver.h  opengl_render.cpp  opengl_render.h  video_render.h
ffmepglibrary/src/main/cpp/media/synthesizer/: synthesizer.cpp  synthesizer.h
ffmepglibrary/src/main/cpp/opengl/drawer/: drawer.cpp  drawer.h  video_drawer.cpp  video_drawer.h
ffmepglibrary/src/main/cpp/opengl/egl/: egl_core.cpp  egl_core.h  egl_surface.cpp  egl_surface.h
ffmepglibrary/src/main/cpp/utils/: logger.h
(+69 files in other folders)
